Improve project structure and add JUnit 4 example