@@ -1,7 +1,8 @@
 package com.example.cryptopricecompare.model.dto;
 
 import com.example.cryptopricecompare.model.Error;
-import org.apache.logging.log4j.util.Strings;
+
+import static org.apache.logging.log4j.util.Strings.isNotBlank;
 
 public class CryptoPriceCompareErrorDTO extends Error {
 
@@ -12,7 +13,7 @@ public class CryptoPriceCompareErrorDTO extends Error {
 
     public CryptoPriceCompareErrorDTO(final String code, final String message, final String messageDetail) {
         super();
-        final String formattedMessage = Strings.isNotBlank(messageDetail) ? String.format("%s [%s]", message, messageDetail) : message;
+        final String formattedMessage = isNotBlank(messageDetail) ? "%s [%s]".formatted(message, messageDetail) : message;
         this.code(code).description(formattedMessage);
     }
 
